--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -37,7 +37,7 @@ Parameters:
 Mappings:
   RegionMap:
     ap-northeast-2:
-      AMI: ami-0c9c942bd7bf113a2
+      AMI: ami-0f3a440bbcff3d043
 
 Resources:
   VsCodeSecurityGroup:
@@ -99,12 +99,12 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          yum update -y
-          yum install -y curl wget git docker unzip
+          dnf update -y
+          dnf install -y curl wget git docker unzip
 
           # Node.js 설치 (code-server 필요)
           curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
-          yum install -y nodejs
+          dnf install -y nodejs
 
           # code-server 설치
           curl -fsSL https://code-server.dev/install.sh | sh
@@ -154,8 +154,8 @@ Resources:
           systemctl start code-server
 
           # 개발 도구 설치
-          yum groupinstall -y "Development Tools"
-          yum install -y python3 python3-pip vim nano htop tree
+          dnf groupinstall -y "Development Tools"
+          dnf install -y python3 python3-pip vim nano htop tree
 
           # AWS 관련 도구 설치
           # AWS CLI v2 설치
@@ -173,27 +173,10 @@ Resources:
           ./sam-installation/install
           rm -rf sam-installation aws-sam-cli-linux-x86_64.zip
 
-          # AWS Copilot CLI 설치
-          curl -Lo copilot https://github.com/aws/copilot-cli/releases/latest/download/copilot-linux
-          chmod +x copilot && mv copilot /usr/local/bin
-
           # kubectl 최신 버전 설치
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
           mv kubectl /usr/local/bin/
-
-          # Terraform 최신 버전 설치
-          TERRAFORM_VER=$$(curl -s https://api.github.com/repos/hashicorp/terraform/releases/latest | grep tag_name | cut -d '"' -f 4 | sed 's/v//')
-          curl -LO "https://releases.hashicorp.com/terraform/$${TERRAFORM_VER}/terraform_$${TERRAFORM_VER}_linux_amd64.zip"
-          unzip "terraform_$${TERRAFORM_VER}_linux_amd64.zip"
-          mv terraform /usr/local/bin/
-          rm "terraform_$${TERRAFORM_VER}_linux_amd64.zip"
-
-          # Terragrunt 설치
-          TERRAGRUNT_VER=$$(curl -s https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest | grep tag_name | cut -d '"' -f 4)
-          curl -LO "https://github.com/gruntwork-io/terragrunt/releases/download/$${TERRAGRUNT_VER}/terragrunt_linux_amd64"
-          chmod +x terragrunt_linux_amd64
-          mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
 
           # Helm 최신 버전 설치
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
@@ -225,7 +208,7 @@ Resources:
           rm "aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
 
           # JSON/YAML 파서 설치
-          yum install -y jq
+          dnf install -y jq
 
           # yq 최신 버전 설치
           YQ_VER=$$(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest | grep tag_name | cut -d '"' -f 4)
@@ -238,15 +221,6 @@ Resources:
           DOCKER_COMPOSE_VER=$$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '"' -f 4)
           curl -L "https://github.com/docker/compose/releases/download/$${DOCKER_COMPOSE_VER}/docker-compose-$$(uname -s)-$$(uname -m)" -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
-
-          # 모니터링 및 로깅 도구
-          # Prometheus 설치
-          PROMETHEUS_VER=$$(curl -s https://api.github.com/repos/prometheus/prometheus/releases/latest | grep tag_name | cut -d '"' -f 4 | sed 's/v//')
-          curl -LO "https://github.com/prometheus/prometheus/releases/download/v$${PROMETHEUS_VER}/prometheus-$${PROMETHEUS_VER}.linux-amd64.tar.gz"
-          tar -xzf prometheus-$${PROMETHEUS_VER}.linux-amd64.tar.gz
-          mv prometheus-$${PROMETHEUS_VER}.linux-amd64/prometheus /usr/local/bin/
-          mv prometheus-$${PROMETHEUS_VER}.linux-amd64/promtool /usr/local/bin/
-          rm -rf prometheus-$${PROMETHEUS_VER}*
 
           # AWS 및 클라우드 관련 Python 패키지 설치
           pip3 install boto3 botocore requests kubernetes docker-py awscli-cwlogs
@@ -265,8 +239,6 @@ Resources:
           echo 'export PATH=/usr/local/bin:\$$PATH' >> ~/.bashrc
           echo 'eval \"\$$(starship init bash)\"' >> ~/.bashrc
           echo 'alias k=kubectl' >> ~/.bashrc
-          echo 'alias tf=terraform' >> ~/.bashrc
-          echo 'alias tg=terragrunt' >> ~/.bashrc
           echo 'alias ll=\"ls -la\"' >> ~/.bashrc
           echo 'alias la=\"ls -A\"' >> ~/.bashrc
           echo 'alias l=\"ls -CF\"' >> ~/.bashrc
