--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -97,159 +97,168 @@ Resources:
             VolumeSize: !Ref VolumeSize
             DeleteOnTermination: true
       UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash
-          dnf update -y
-          dnf install -y curl wget git docker unzip
+        Fn::Base64:
+          Fn::Join:
+            - ''
+            - - |
+                #!/bin/bash
+                dnf update -y
+                dnf install -y curl wget git docker unzip
 
-          # Node.js 설치 (code-server 필요)
-          curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
-          dnf install -y nodejs
+                # Node.js 설치 (code-server 필요)
+                curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
+                dnf install -y nodejs
 
-          # code-server 설치
-          curl -fsSL https://code-server.dev/install.sh | sh
+                # code-server 설치
+                curl -fsSL https://code-server.dev/install.sh | sh
 
-          # student 사용자 생성 및 권한 설정
-          useradd -m -s /bin/bash student
-          usermod -aG wheel student
-          usermod -aG docker student
-          mkdir -p /home/student/.config/code-server
+                # student 사용자 생성 및 권한 설정
+                useradd -m -s /bin/bash student
+                usermod -aG wheel student
+                usermod -aG docker student
+                mkdir -p /home/student/.config/code-server
 
-          # code-server 설정
-          cat > /home/student/.config/code-server/config.yaml << EOF
-          bind-addr: 0.0.0.0:8080
-          auth: password
-          password: ${VsCodePassword}
-          cert: false
-          EOF
+                # code-server 설정
+                cat > /home/student/.config/code-server/config.yaml << EOF
+                bind-addr: 0.0.0.0:8080
+                auth: password
+                password: 
+              - !Ref VsCodePassword
+              - |+
 
-          # 소유권 설정
-          chown -R student:student /home/student/.config
+                cert: false
+                EOF
 
-          # systemd 서비스 생성
-          cat > /etc/systemd/system/code-server.service << EOF
-          [Unit]
-          Description=code-server
-          After=network.target
+                # 소유권 설정
+                chown -R student:student /home/student/.config
 
-          [Service]
-          Type=simple
-          User=student
-          WorkingDirectory=/home/student
-          ExecStart=/usr/bin/code-server
-          Restart=on-failure
-          RestartSec=5
+                # systemd 서비스 생성
+                cat > /etc/systemd/system/code-server.service << EOF
+                [Unit]
+                Description=code-server
+                After=network.target
 
-          [Install]
-          WantedBy=multi-user.target
-          EOF
+                [Service]
+                Type=simple
+                User=student
+                WorkingDirectory=/home/student
+                ExecStart=/usr/bin/code-server
+                Restart=on-failure
+                RestartSec=5
 
-          # Docker 활성화 및 시작
-          systemctl enable docker
-          systemctl start docker
+                [Install]
+                WantedBy=multi-user.target
+                EOF
 
-          # code-server 활성화 및 시작
-          systemctl daemon-reload
-          systemctl enable code-server
-          systemctl start code-server
+                # Docker 활성화 및 시작
+                systemctl enable docker
+                systemctl start docker
 
-          # 개발 도구 설치
-          dnf groupinstall -y "Development Tools"
-          dnf install -y python3 python3-pip vim nano htop tree
+                # code-server 활성화 및 시작
+                systemctl daemon-reload
+                systemctl enable code-server
+                systemctl start code-server
 
-          # AWS 관련 도구 설치
-          # AWS CLI v2 설치
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          ./aws/install
-          rm -rf aws awscliv2.zip
+                # 개발 도구 설치
+                dnf groupinstall -y "Development Tools"
+                dnf install -y python3 python3-pip vim nano htop tree
 
-          # AWS CDK 설치
-          npm install -g aws-cdk
+                # AWS 관련 도구 설치
+                # AWS CLI v2 설치
+                curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                unzip awscliv2.zip
+                ./aws/install
+                rm -rf aws awscliv2.zip
 
-          # AWS SAM CLI 설치
-          curl -LO https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
-          unzip aws-sam-cli-linux-x86_64.zip -d sam-installation
-          ./sam-installation/install
-          rm -rf sam-installation aws-sam-cli-linux-x86_64.zip
+                # AWS CDK 설치
+                npm install -g aws-cdk
 
-          # kubectl 최신 버전 설치
-          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x kubectl
-          mv kubectl /usr/local/bin/
+                # AWS SAM CLI 설치
+                curl -LO https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
+                unzip aws-sam-cli-linux-x86_64.zip -d sam-installation
+                ./sam-installation/install
+                rm -rf sam-installation aws-sam-cli-linux-x86_64.zip
 
-          # Helm 최신 버전 설치
-          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+                # kubectl 최신 버전 설치
+                curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                chmod +x kubectl
+                mv kubectl /usr/local/bin/
 
-          # Kubernetes 관련 도구 설치
-          # kubectx, kubens 설치
-          curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubectx
-          curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubens
-          chmod +x kubectx kubens
-          mv kubectx kubens /usr/local/bin/
+                # Helm 최신 버전 설치
+                curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
-          # k9s 설치 (Kubernetes 클러스터 관리 도구)
-          K9S_VER=$$(curl -s https://api.github.com/repos/derailed/k9s/releases/latest | grep tag_name | cut -d '"' -f 4)
-          curl -LO "https://github.com/derailed/k9s/releases/download/$${K9S_VER}/k9s_Linux_amd64.tar.gz"
-          tar -xzf k9s_Linux_amd64.tar.gz
-          mv k9s /usr/local/bin/
-          rm k9s_Linux_amd64.tar.gz
+                # Kubernetes 관련 도구 설치
+                # kubectx, kubens 설치
+                curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubectx
+                curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubens
+                chmod +x kubectx kubens
+                mv kubectx kubens /usr/local/bin/
 
-          # Istio CLI 설치
-          curl -L https://istio.io/downloadIstio | sh -
-          mv istio-*/bin/istioctl /usr/local/bin/
-          rm -rf istio-*
+                # k9s 설치 (Kubernetes 클러스터 관리 도구)
+                K9S_VER=$(curl -s https://api.github.com/repos/derailed/k9s/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/derailed/k9s/releases/download/${K9S_VER}/k9s_Linux_amd64.tar.gz"
+                tar -xzf k9s_Linux_amd64.tar.gz
+                mv k9s /usr/local/bin/
+                rm k9s_Linux_amd64.tar.gz
 
-          # aws-runas 설치
-          AWS_RUNAS_VER=$$(curl -s https://api.github.com/repos/mmmorris1975/aws-runas/releases/latest | grep tag_name | cut -d '"' -f 4)
-          curl -LO "https://github.com/mmmorris1975/aws-runas/releases/download/$${AWS_RUNAS_VER}/aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
-          unzip "aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
-          mv aws-runas /usr/local/bin/
-          rm "aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
+                # Istio CLI 설치
+                curl -L https://istio.io/downloadIstio | sh -
+                mv istio-*/bin/istioctl /usr/local/bin/
+                rm -rf istio-*
 
-          # JSON/YAML 파서 설치
-          dnf install -y jq
+                # aws-runas 설치
+                AWS_RUNAS_VER=$(curl -s https://api.github.com/repos/mmmorris1975/aws-runas/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/mmmorris1975/aws-runas/releases/download/${AWS_RUNAS_VER}/aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
+                unzip "aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
+                mv aws-runas /usr/local/bin/
+                rm "aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
 
-          # yq 최신 버전 설치
-          YQ_VER=$$(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest | grep tag_name | cut -d '"' -f 4)
-          curl -LO "https://github.com/mikefarah/yq/releases/download/$${YQ_VER}/yq_linux_amd64"
-          chmod +x yq_linux_amd64
-          mv yq_linux_amd64 /usr/local/bin/yq
+                # JSON/YAML 파서 설치
+                dnf install -y jq
 
-          # 컨테이너 관련 도구
-          # Docker Compose 설치
-          DOCKER_COMPOSE_VER=$$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '"' -f 4)
-          curl -L "https://github.com/docker/compose/releases/download/$${DOCKER_COMPOSE_VER}/docker-compose-$$(uname -s)-$$(uname -m)" -o /usr/local/bin/docker-compose
-          chmod +x /usr/local/bin/docker-compose
+                # yq 최신 버전 설치
+                YQ_VER=$(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/mikefarah/yq/releases/download/${YQ_VER}/yq_linux_amd64"
+                chmod +x yq_linux_amd64
+                mv yq_linux_amd64 /usr/local/bin/yq
 
-          # AWS 및 클라우드 관련 Python 패키지 설치
-          pip3 install boto3 botocore requests kubernetes docker-py awscli-cwlogs
-          pip3 install ansible ansible-lint
-          pip3 install pyyaml jsonschema
-          pip3 install awscli-plugin-endpoint
+                # 컨테이너 관련 도구
+                # Docker Compose 설치
+                DOCKER_COMPOSE_VER=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VER}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+                chmod +x /usr/local/bin/docker-compose
 
-          # Git 설정 및 유용한 도구들
-          git config --global init.defaultBranch main
-          
-          # Starship 프롬프트 설치 (터미널 꾸미기)
-          curl -sS https://starship.rs/install.sh | sh -s -- -y
+                # AWS 및 클라우드 관련 Python 패키지 설치
+                pip3 install boto3 botocore requests kubernetes docker-py awscli-cwlogs
+                pip3 install ansible ansible-lint
+                pip3 install pyyaml jsonschema
+                pip3 install awscli-plugin-endpoint
 
-          # student 사용자 환경 설정
-          su - student -c "
-          echo 'export PATH=/usr/local/bin:\$$PATH' >> ~/.bashrc
-          echo 'eval \"\$$(starship init bash)\"' >> ~/.bashrc
-          echo 'alias k=kubectl' >> ~/.bashrc
-          echo 'alias ll=\"ls -la\"' >> ~/.bashrc
-          echo 'alias la=\"ls -A\"' >> ~/.bashrc
-          echo 'alias l=\"ls -CF\"' >> ~/.bashrc
-          echo 'complete -F __start_kubectl k' >> ~/.bashrc
-          "
+                # Git 설정 및 유용한 도구들
+                git config --global init.defaultBranch main
+                
+                # Starship 프롬프트 설치 (터미널 꾸미기)
+                curl -sS https://starship.rs/install.sh | sh -s -- -y
 
-          # 권한 설정
-          chown -R student:student /home/student
+                # student 사용자 환경 설정
+                su - student -c "
+                echo 'export PATH=/usr/local/bin:\$PATH' >> ~/.bashrc
+                echo 'eval \"\$(starship init bash)\"' >> ~/.bashrc
+                echo 'alias k=kubectl' >> ~/.bashrc
+                echo 'alias ll=\"ls -la\"' >> ~/.bashrc
+                echo 'alias la=\"ls -A\"' >> ~/.bashrc
+                echo 'alias l=\"ls -CF\"' >> ~/.bashrc
+                echo 'complete -F __start_kubectl k' >> ~/.bashrc
+                "
 
-          # 완료 신호 전송
-          /opt/aws/bin/cfn-signal -e $$? --stack ${AWS::StackName} --resource VsCodeInstance --region ${AWS::Region}
+                # 권한 설정
+                chown -R student:student /home/student
+
+                # 완료 신호 전송
+                /opt/aws/bin/cfn-signal -e $? --stack 
+              - !Ref 'AWS::StackName'
+              - ' --resource VsCodeInstance --region '
+              - !Ref 'AWS::Region'
 
       Tags:
         - Key: Name
