--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -38,7 +38,7 @@ Mappings:
   RegionMap:
     ap-northeast-2:
       AMI: ami-0f3a440bbcff3d043
-
+      
 Resources:
   VsCodeSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -102,19 +102,20 @@ Resources:
             - ''
             - - |
                 #!/bin/bash
-                dnf update -y
-                dnf install -y curl wget git docker unzip
+                export DEBIAN_FRONTEND=noninteractive
+                apt update -y
+                apt install -y curl wget git docker.io unzip build-essential
 
                 # Node.js 설치 (code-server 필요)
-                curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
-                dnf install -y nodejs
+                curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+                apt install -y nodejs
 
                 # code-server 설치
                 curl -fsSL https://code-server.dev/install.sh | sh
 
                 # student 사용자 생성 및 권한 설정
                 useradd -m -s /bin/bash student
-                usermod -aG wheel student
+                usermod -aG sudo student
                 usermod -aG docker student
                 mkdir -p /home/student/.config/code-server
 
@@ -160,8 +161,7 @@ Resources:
                 systemctl start code-server
 
                 # 개발 도구 설치
-                dnf groupinstall -y "Development Tools"
-                dnf install -y python3 python3-pip vim nano htop tree
+                apt install -y python3 python3-pip vim nano htop tree jq
 
                 # AWS 관련 도구 설치
                 # AWS CLI v2 설치
@@ -173,66 +173,58 @@ Resources:
                 # AWS CDK 설치
                 npm install -g aws-cdk
 
-                # AWS SAM CLI 설치
-                curl -LO https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
-                unzip aws-sam-cli-linux-x86_64.zip -d sam-installation
-                ./sam-installation/install
-                rm -rf sam-installation aws-sam-cli-linux-x86_64.zip
-
                 # kubectl 최신 버전 설치
-                curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                curl -LO "https://dl.k8s.io/release/$$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
                 chmod +x kubectl
                 mv kubectl /usr/local/bin/
 
                 # Helm 최신 버전 설치
                 curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
-                # Kubernetes 관련 도구 설치
-                # kubectx, kubens 설치
-                curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubectx
-                curl -LO https://github.com/ahmetb/kubectx/releases/latest/download/kubens
-                chmod +x kubectx kubens
-                mv kubectx kubens /usr/local/bin/
+                # Terraform 설치
+                TERRAFORM_VER=$$(curl -s https://api.github.com/repos/hashicorp/terraform/releases/latest | grep tag_name | cut -d '"' -f 4 | sed 's/v//')
+                curl -LO "https://releases.hashicorp.com/terraform/$${TERRAFORM_VER}/terraform_$${TERRAFORM_VER}_linux_amd64.zip"
+                unzip "terraform_$${TERRAFORM_VER}_linux_amd64.zip"
+                mv terraform /usr/local/bin/
+                rm "terraform_$${TERRAFORM_VER}_linux_amd64.zip"
 
-                # k9s 설치 (Kubernetes 클러스터 관리 도구)
-                K9S_VER=$(curl -s https://api.github.com/repos/derailed/k9s/releases/latest | grep tag_name | cut -d '"' -f 4)
-                curl -LO "https://github.com/derailed/k9s/releases/download/${K9S_VER}/k9s_Linux_amd64.tar.gz"
-                tar -xzf k9s_Linux_amd64.tar.gz
-                mv k9s /usr/local/bin/
-                rm k9s_Linux_amd64.tar.gz
+                # krew (kubectl plugin manager) 설치
+                KREW_VER=$$(curl -s https://api.github.com/repos/kubernetes-sigs/krew/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/kubernetes-sigs/krew/releases/download/$${KREW_VER}/krew-linux_amd64.tar.gz"
+                tar -xzf krew-linux_amd64.tar.gz
+                
+                # student 사용자로 krew 설치
+                su - student -c "
+                cd /tmp
+                curl -LO \"https://github.com/kubernetes-sigs/krew/releases/download/$${KREW_VER}/krew-linux_amd64.tar.gz\"
+                tar -xzf krew-linux_amd64.tar.gz
+                ./krew-linux_amd64 install krew
+                rm krew-linux_amd64*
+                export PATH=\"\${KREW_ROOT:-\$HOME/.krew}/bin:\$PATH\"
+                kubectl krew install ctx
+                kubectl krew install ns
+                "
+                
+                rm -f krew-linux_amd64*
 
-                # Istio CLI 설치
-                curl -L https://istio.io/downloadIstio | sh -
-                mv istio-*/bin/istioctl /usr/local/bin/
-                rm -rf istio-*
+                # kubecolor 설치
+                KUBECOLOR_VER=$$(curl -s https://api.github.com/repos/hidetatz/kubecolor/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/hidetatz/kubecolor/releases/download/$${KUBECOLOR_VER}/kubecolor_$${KUBECOLOR_VER}_Linux_x86_64.tar.gz"
+                tar -xzf "kubecolor_$${KUBECOLOR_VER}_Linux_x86_64.tar.gz"
+                mv kubecolor /usr/local/bin/
+                rm "kubecolor_$${KUBECOLOR_VER}_Linux_x86_64.tar.gz"
+
+                # kube-ps1 설치 (Kubernetes 프롬프트)
+                curl -LO https://raw.githubusercontent.com/jonmosco/kube-ps1/master/kube-ps1.sh
+                mv kube-ps1.sh /usr/local/bin/
+                chmod +x /usr/local/bin/kube-ps1.sh
 
                 # aws-runas 설치
-                AWS_RUNAS_VER=$(curl -s https://api.github.com/repos/mmmorris1975/aws-runas/releases/latest | grep tag_name | cut -d '"' -f 4)
-                curl -LO "https://github.com/mmmorris1975/aws-runas/releases/download/${AWS_RUNAS_VER}/aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
-                unzip "aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
+                AWS_RUNAS_VER=$$(curl -s https://api.github.com/repos/mmmorris1975/aws-runas/releases/latest | grep tag_name | cut -d '"' -f 4)
+                curl -LO "https://github.com/mmmorris1975/aws-runas/releases/download/$${AWS_RUNAS_VER}/aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
+                unzip "aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
                 mv aws-runas /usr/local/bin/
-                rm "aws-runas-${AWS_RUNAS_VER}-linux-amd64.zip"
-
-                # JSON/YAML 파서 설치
-                dnf install -y jq
-
-                # yq 최신 버전 설치
-                YQ_VER=$(curl -s https://api.github.com/repos/mikefarah/yq/releases/latest | grep tag_name | cut -d '"' -f 4)
-                curl -LO "https://github.com/mikefarah/yq/releases/download/${YQ_VER}/yq_linux_amd64"
-                chmod +x yq_linux_amd64
-                mv yq_linux_amd64 /usr/local/bin/yq
-
-                # 컨테이너 관련 도구
-                # Docker Compose 설치
-                DOCKER_COMPOSE_VER=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep tag_name | cut -d '"' -f 4)
-                curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VER}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-                chmod +x /usr/local/bin/docker-compose
-
-                # AWS 및 클라우드 관련 Python 패키지 설치
-                pip3 install boto3 botocore requests kubernetes docker-py awscli-cwlogs
-                pip3 install ansible ansible-lint
-                pip3 install pyyaml jsonschema
-                pip3 install awscli-plugin-endpoint
+                rm "aws-runas-$${AWS_RUNAS_VER}-linux-amd64.zip"
 
                 # Git 설정 및 유용한 도구들
                 git config --global init.defaultBranch main
@@ -243,12 +235,19 @@ Resources:
                 # student 사용자 환경 설정
                 su - student -c "
                 echo 'export PATH=/usr/local/bin:\$PATH' >> ~/.bashrc
+                echo 'export PATH=\"\${KREW_ROOT:-\$HOME/.krew}/bin:\$PATH\"' >> ~/.bashrc
                 echo 'eval \"\$(starship init bash)\"' >> ~/.bashrc
+                echo 'source /usr/local/bin/kube-ps1.sh' >> ~/.bashrc
+                echo 'PS1=\"[\u@\h \W \$(kube_ps1)]\$ \"' >> ~/.bashrc
                 echo 'alias k=kubectl' >> ~/.bashrc
+                echo 'alias kc=kubecolor' >> ~/.bashrc
+                echo 'alias kctx=\"kubectl ctx\"' >> ~/.bashrc
+                echo 'alias kns=\"kubectl ns\"' >> ~/.bashrc
                 echo 'alias ll=\"ls -la\"' >> ~/.bashrc
                 echo 'alias la=\"ls -A\"' >> ~/.bashrc
                 echo 'alias l=\"ls -CF\"' >> ~/.bashrc
                 echo 'complete -F __start_kubectl k' >> ~/.bashrc
+                echo 'complete -F __start_kubectl kc' >> ~/.bashrc
                 "
 
                 # 권한 설정
@@ -289,7 +288,7 @@ Outputs:
 
   SSHCommand:
     Description: SSH command to connect to the instance
-    Value: !Sub 'ssh -i your-key.pem ec2-user@${VsCodeInstance.PublicIp}'
+    Value: !Sub 'ssh -i your-key.pem ubuntu@${VsCodeInstance.PublicIp}'
     Export:
       Name: !Sub '${AWS::StackName}-SSHCommand'
 
